--- a/package.json
+++ b/package.json
@@ -9,18 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/model-viewer": "^3.5.0",
+    "@heroicons/react": "^2.1.3",
+    "@metaplex-foundation/mpl-core": "^1.1.0-alpha.1",
+    "@metaplex-foundation/mpl-inscription": "^0.8.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-signer-wallet-adapters": "^0.9.2",
+    "@metaplex-foundation/umi-uploader-irys": "^0.9.2",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@solana-mobile/wallet-adapter-mobile": "^2.1.3",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.93.2",
+    "axios": "^1.7.2",
+    "bs58": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.4.1",
+    "msgpack-lite": "^0.1.26",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dropzone": "^14.2.3",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/msgpack-lite": "^0.1.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
